--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -189,11 +189,11 @@ exec compton --config ~/.config/compton.conf
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-	position top
-	status_command i3status -c ~/.config/i3/i3status.conf 
-}
-#exec_always --no-startup-id ~/.config/polybar/launch.sh
+#bar {
+#	position top
+#	status_command i3status -c ~/.config/i3/i3status.conf 
+#}
+exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 # Network Manager
 exec --no-startup-id nm-applet
