Fix Polybar fonts (Roboto => Siji => Symbola)

--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -27,14 +27,14 @@ primary = #c50ed2
 secondary = #fefefe
 alert = #bd2c40
 
-[bar/example]
+[bar/top]
 ;monitor = ${env:MONITOR:eDP1}
 width = 100%
 height = 24
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 2.0
-fixed-center = false
+fixed-center = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -51,16 +51,16 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = fixed:pixelsize=10;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
+font-0 = Roboto:style=Regular:size=10;2
+font-1 = Siji:style=Regular:size=10;2
+font-2 = Symbola:style=Regular:size=10;2
 
 modules-left = i3
-modules-center = 
-modules-right = filesystem xbacklight pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
+modules-center = filesystem memory cpu temperature
+modules-right = xbacklight pulseaudio xkeyboard wlan eth battery date powermenu
 
 tray-position = right
-tray-padding = 2
+tray-padding = 1
 ;tray-background = #0063ff
 
 ;wm-restack = bspwm
@@ -164,7 +164,7 @@ label-song-ellipsis = true
 type = internal/xbacklight
 
 format = <label> <bar>
-label = BL
+label = ☀
 
 bar-width = 10
 bar-indicator = |
@@ -256,13 +256,13 @@ label = %date% %time%
 type = internal/pulseaudio
 
 format-volume = <label-volume> <bar-volume>
-label-volume = VOL %percentage%%
+label-volume = 🔊 %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted = 🔇 muted
+label-muted = 🔇%percentage%%
 label-muted-foreground = #666
 
-bar-volume-width = 10
+bar-volume-width = 1
 bar-volume-foreground-0 = #55aa55
 bar-volume-foreground-1 = #55aa55
 bar-volume-foreground-2 = #55aa55
@@ -271,13 +271,13 @@ bar-volume-foreground-4 = #55aa55
 bar-volume-foreground-5 = #f5a70a
 bar-volume-foreground-6 = #ff5555
 bar-volume-gradient = false
-bar-volume-indicator = |
+bar-volume-indicator = 
 bar-volume-indicator-font = 2
 bar-volume-fill = ─
 bar-volume-fill-font = 2
 bar-volume-empty = ─
 bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
+var-volume-empty-foreground = ${colors.foreground}
 
 [module/alsa]
 type = internal/alsa
