--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -23,9 +23,14 @@ background-alt = #1e2233
 ;foreground = ${xrdb:color7:#222}
 foreground = #d3dae3
 foreground-alt = #666a73
-primary = #c50ed2
-secondary = #fefefe
-alert = #bd2c40
+magenta = #c50ed2
+white = #fefefe
+red = #bd2c40
+green = #71f79f
+orange = #ff6a01
+blue = #2980b9
+lightblue = #3daee9
+yellow = #fdbc4b
 
 [bar/top]
 ;monitor = ${env:MONITOR:eDP1}
@@ -56,7 +61,7 @@ font-1 = Siji:style=Regular:size=10;2
 font-2 = Symbola:style=Regular:size=10;2
 
 modules-left = i3
-modules-center = filesystem memory cpu temperature
+modules-center = filesystem cpu memory temperature
 modules-right = xbacklight pulseaudio xkeyboard wlan eth battery date powermenu
 
 tray-position = right
@@ -86,16 +91,16 @@ type = internal/xkeyboard
 blacklist-0 = num lock
 
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = ${colors.secondary}
+format-prefix-foreground = ${colors.foreground}
+format-prefix-underline = ${colors.white}
 
 label-layout = %layout%
-label-layout-underline = ${colors.secondary}
+label-layout-underline = ${colors.white}
 
 label-indicator-padding = 2
 label-indicator-margin = 1
-label-indicator-background = ${colors.secondary}
-label-indicator-underline = ${colors.secondary}
+label-indicator-background = ${colors.white}
+label-indicator-underline = ${colors.white}
 
 [module/filesystem]
 type = internal/fs
@@ -104,7 +109,7 @@ interval = 25
 mount-0 = /
 mount-1 = /home
 
-label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
+label-mounted = %{F#3daee9}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
@@ -120,12 +125,12 @@ wrapping-scroll = false
 
 label-mode-padding = 2
 label-mode-foreground = #000
-label-mode-background = ${colors.primary}
+label-mode-background = ${colors.magenta}
 
 ; focused = Active workspace on focused monitor
 label-focused = %index%
 label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
+label-focused-underline= ${colors.magenta}
 label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
@@ -140,7 +145,7 @@ label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
 label-urgent = %index%
-label-urgent-background = ${colors.alert}
+label-urgent-background = ${colors.red}
 label-urgent-padding = 2
 
 ; Separator in between workspaces
@@ -186,15 +191,15 @@ card = intel_backlight
 type = internal/cpu
 interval = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
+format-prefix-foreground = ${colors.foreground}
+format-underline = ${colors.magenta}
 label = %percentage:2%%
 
 [module/memory]
 type = internal/memory
 interval = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
+format-prefix-foreground = ${colors.foreground}
 format-underline = #4bffdc
 label = %percentage_used%%
 
@@ -204,18 +209,18 @@ interface = wlp2s0
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
-format-connected-underline = #9f78e1
+format-connected-underline = ${colors.blue}
 label-connected = %essid%
 
 format-disconnected =  
-format-disconnected-underline = ${colors.alert}
+format-disconnected-underline = ${colors.red}
 
 ramp-signal-0 = 
 ramp-signal-1 = 
 ramp-signal-2 = 
 ramp-signal-3 = 
 ramp-signal-4 = 
-ramp-signal-foreground = ${colors.foreground-alt}
+ramp-signal-foreground = ${colors.foreground}
 
 [module/eth]
 type = internal/network
@@ -244,8 +249,8 @@ time = %H:%M
 time-alt = %H:%M:%S
 
 format-prefix = 
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
+format-prefix-foreground = ${colors.foreground}
+format-underline = ${colors.magenta}
 
 label = %date% %time%
 
@@ -256,7 +261,7 @@ format-volume = <label-volume> <bar-volume>
 label-volume = 🔊 %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted = 🔇%percentage%%
+label-muted = 🔇  %percentage%%
 label-muted-foreground = #666
 
 bar-volume-width = 1
@@ -311,30 +316,30 @@ adapter = AC
 full-at = 98
 
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
+format-charging-underline = {colors.green}
 
 format-discharging = <animation-discharging> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
+format-discharging-underline = ${colors.yellow}
 
 format-full-prefix = " "
 format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
+format-full-underline = ${colors.green}
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
+ramp-capacity-foreground = ${colors.foreground}
 
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
+animation-charging-foreground = ${colors.foreground}
 animation-charging-framerate = 750
 
 animation-discharging-0 = 
 animation-discharging-1 = 
 animation-discharging-2 = 
-animation-discharging-foreground = ${colors.foreground-alt}
+animation-discharging-foreground = ${colors.foreground}
 animation-discharging-framerate = 750
 
 [module/temperature]
@@ -343,18 +348,18 @@ thermal-zone = 0
 warn-temperature = 60
 
 format = <ramp> <label>
-format-underline = #f50a4d
+format-underline = ${colors.green}
 format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
+format-warn-underline = ${colors.red}
 
 label = %temperature-c%
 label-warn = %temperature-c%
-label-warn-foreground = ${colors.secondary}
+label-warn-foreground = ${colors.foreground}
 
 ramp-0 = 
 ramp-1 = 
 ramp-2 = 
-ramp-foreground = ${colors.foreground-alt}
+ramp-foreground = ${colors.foreground}
 
 [module/powermenu]
 type = custom/menu
@@ -364,9 +369,9 @@ expand-right = true
 format-spacing = 2
 
 label-open = 
-label-open-foreground = ${colors.secondary}
+label-open-foreground = ${colors.white}
 label-close =  cancel
-label-close-foreground = ${colors.secondary}
+label-close-foreground = ${colors.white}
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
 
