--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -60,9 +60,9 @@ font-0 = Roboto:style=Regular:size=10;2
 font-1 = Siji:style=Regular:size=10;2
 font-2 = Symbola:style=Regular:size=10;2
 
-modules-left = i3
-modules-center = filesystem cpu memory temperature
-modules-right = xbacklight pulseaudio xkeyboard wlan eth battery date powermenu
+modules-left = i3 pulseaudio player-mpris-tail
+modules-center = updates-arch-combined filesystem cpu memory temperature
+modules-right = xbacklight xkeyboard wlan eth battery date powermenu
 
 tray-position = right
 tray-padding = 1
@@ -101,6 +101,17 @@ label-indicator-padding = 2
 label-indicator-margin = 1
 label-indicator-background = ${colors.white}
 label-indicator-underline = ${colors.white}
+
+[module/player-mpris-tail]
+type = custom/script
+exec = ~/polybar-scripts/player-mpris-tail.py -f '{:artist:t16:{artist}:}{:artist: - :}{:t18:{title}:} %{A1:~/polybar-scripts/player-mpris-tail.py previous:} ⏮ %{A} %{A1:~/polybar-scripts/player-mpris-tail.py play-pause:} {icon-reversed} %{A} %{A1:~/polybar-scripts/player-mpris-tail.py next:} ⏭ %{A}'
+tail = true
+label = %output%
+
+[module/updates-arch-combined]
+type = custom/script
+exec = ~/polybar-scripts/updates-arch-combined.sh
+interval = 600
 
 [module/filesystem]
 type = internal/fs
