--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -31,6 +31,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec alacritty
+bindsym $mod+Shift+Return exec alacritty --working-directory "`xcwd`"
 
 # kill focused window
 bindsym $mod+Shift+q kill
