--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -33,7 +33,7 @@ lightblue = #3daee9
 yellow = #fdbc4b
 
 [bar/top]
-;monitor = ${env:MONITOR:eDP1}
+monitor = ${env:MONITOR:}
 width = 100%
 height = 24
 ;offset-x = 1%border-color = #00000000
