--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -195,9 +195,9 @@ bindsym $mod+r mode "resize"
 #
 # Function keys
 #
-bindsym XF86AudioMute exec pactl -- set-sink-mute 0 toggle
-bindsym XF86AudiolowerVolume exec pactl -- set-sink-volume 0 -5%
-bindsym XF86AudioRaiseVolume exec pactl -- set-sink-volume 0 +5%
+bindsym XF86AudioMute exec pactl -- set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudiolowerVolume exec pactl -- set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioRaiseVolume exec pactl -- set-sink-volume @DEFAULT_SINK@ +5%
 bindsym XF86AudioMicMute exec pactl -- set-source-mute 1 toggle
 bindsym XF86MonBrightnessUp exec light -A 10
 bindsym XF86MonBrightnessDown exec light -U 10
