--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -124,7 +124,7 @@
             "car": "",
             "default": ["", "", ""]
         },
-        "on-click": "pavucontrol"
+        "on-click": "pavucontrol-qt"
     },
     "bluetooth": {
 	"format": "{icon}",
